# yeet-rs

./: CNAME  Cargo.toml  README.md  RELEASE.md  install.sh
src/: linux.rs  macos.rs  main.rs  windows.rs
