[package]
name = "yeet-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/robert-cunningham/yeet-rs/"
readme = "README.md"
description = "Kill the process hogging your ports"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
