[package]
name = "yeet-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/robert-cunningham/yeet-rs/"
readme = "README.md"
description = "Kill the process hogging your ports"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
procfs = "0.12.0"
nix = "0.23.1"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
